WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59914
WebKit2: Crash closing tab with docked Web Inspector
https://bugs.webkit.org/show_bug.cgi?id=59914
Summary
WebKit2: Crash closing tab with docked Web Inspector
Brian Weinstein
Reported
2011-05-01 22:01:25 PDT
There is a crash closing a tab with a docked web inspector. State isn't being torn down correctly, and the WindowMessageBroadcaster listener isn't being removed. <
rdar://problem/9359672
>
Attachments
[PATCH] fix
(4.85 KB, patch)
2011-05-01 22:09 PDT
,
Brian Weinstein
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2011-05-01 22:09:25 PDT
Created
attachment 91881
[details]
[PATCH] fix
mitz
Comment 2
2011-05-01 22:14:13 PDT
Comment on
attachment 91881
[details]
[PATCH] fix View in context:
https://bugs.webkit.org/attachment.cgi?id=91881&action=review
> Source/WebKit2/ChangeLog:10 > + didn't do the tear that is needed, but is called when we close the web inspector explcitly.
typo: “tear that”
Brian Weinstein
Comment 3
2011-05-01 22:44:45 PDT
Landed in
r85457
.
Adam Roben (:aroben)
Comment 4
2011-05-02 07:10:04 PDT
Can you make a test for this using TestWebKitAPI?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug