Source/WebKit2/UIProcess/qt/WebInspectorProxyQt.cpp
@@ -44,7 +44,7 @@ void WebInspectorProxy::platformOpen()
     notImplemented();
 }
 
-void WebInspectorProxy::platformClose()
+void WebInspectorProxy::platformDidClose()
 {
     notImplemented();
 }
